sample/TypeError/t03.py
# def sum(n):
#     s = 0
#     for i in range(1, n + 1):
#         s += i
#     return s

# x = "9"
# print(sum(x))

x = "9"
print(1 + 1 + x)

#nを受け取って1からnまでの総和を求める